<resources>
    <string name="app_name">YQPGKS</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="current_expenses">Current expenses</string>
    <string name="change_settings">Change settings:</string>
    <string name="currency">Currency:</string>
    <string name="usd">USD</string>
    <string name="rub">RUB</string>
    <string name="yen">YEN</string>
    <string name="expense_s_type">Expense\'s type</string>
    <string name="choose_date">Choose date</string>
    <string name="sum">Sum:</string>
    <string name="_0">0</string>
    <string name="eur">EUR</string>
    <string name="bySum">Sum</string>
    <string name="byDate">Date</string>
    <string name="byName">Name</string>
    <string name="sort_by">Sort:</string>
    <string-array name="drop_down_list">
        <item>Month</item>
        <item>Day</item>
        <item>Week</item>
        <item>Year</item>
    </string-array>
</resources>
