<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/home_spinner"
        style="@style/spinner_style"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="0"
        android:background="@drawable/drop_down"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/expense_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/home_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_tv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/sort_by"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_btn_date"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:background="@drawable/button_sort_date"
            android:text="@string/byDate"
            android:textColor="@color/colorPrimary"
            tools:targetApi="o" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_btn_name"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:background="@drawable/button_sort_name"
            android:text="@string/byName"
            android:textColor="@color/colorPrimary"
            tools:targetApi="o" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_btn_sum"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:background="@drawable/button_sort_sum"
            android:text="@string/bySum"
            android:textColor="@color/colorPrimary"
            tools:targetApi="o" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>